# ArchPlanReview

./: .gitignore  README.md  pyproject.toml  run.bat
.github/workflows/: tests.yml
archplanreview/: app.py  extractors.py  models.py  search.py
archplanreview/static/: app.js  index.html  styles.css
docs/: ARCHITECTURE.md
tests/: test_api.py  test_search_engine.py
