[project]
name = "archplanreview"
version = "0.1.0"
description = "Local-first architectural plan search with PDF/text extraction, OCR fallback hooks, and highlighted results."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pymupdf>=1.24",
  "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "reportlab>=4.0",
]
ocr = [
  "pytesseract>=0.3.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
